# codec2-on-esp-lyrat

./: CMakeLists.txt  log.txt  sdkconfig  sdkconfig.old  settings.json
components/arduino/: CMakeLists.txt
components/arduino/libraries/codec2/: FastAudioFIFO.h  codec2.c  codec2.h  lpc.c  phaseexp.c
components/codec2_user/: CMakeLists.txt  codec2_user.c
components/codec2_user/include/: codec2_user.h
main/: customs.h  main.c  main.cpp  project_header.h
