idf_component_register(SRCS "codec2_user.c"
                    INCLUDE_DIRS "include"
  "C:/Espressif/esp-adf/components/display_service/include"
  "C:/Espressif/esp-adf/components/esp_actions/include"
  "C:/Espressif/esp-adf/components/esp_codec_dev/include"
  "C:/Espressif/esp-adf/components/esp_dispatcher/include"
  "C:/Espressif/esp-adf/components/esp_event_cast/include"
  "C:/Espressif/esp-adf/components/esp_peripherals/include"
  "C:/Espressif/esp-adf/components/esp-adf-libs/esp_audio/include"
  "C:/Espressif/esp-adf/components/esp-adf-libs/esp_codec/include/codec"
  "C:/Espressif/esp-adf/components/esp-sr/include"
  "C:/Espressif/esp-adf/components/input_key_service/include"
  "C:/Espressif/esp-adf/components/ota_service/include"
  "C:/Espressif/esp-adf/components/playlist/include"
  "C:/Espressif/esp-adf/components/tone_partition/include"
  "C:/Espressif/esp-adf/components/wifi_service/include"
  "C:/Espressif/esp-adf/components/adf_utils/include"
  "C:/Espressif/esp-adf/components/audio_board/include"
  "C:/Espressif/esp-adf/components/audio_hal/include"
  "C:/Espressif/esp-adf/components/audio_pipeline/include"
  "C:/Espressif/esp-adf/components/audio_recorder/include"
  "C:/Espressif/esp-adf/components/audio_sal/include"
  "C:/Espressif/esp-adf/components/audio_stream/include"
  "C:/Espressif/esp-adf/components/battery_service/include"
  "C:/Espressif/esp-adf/components/bluetooth_service/include")
